# assessment-mod6

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  buildspec.yml  index.html  main.py  pyproject.toml  requirements.txt
src/: todo_list.py
templates/: index.html
tests/acceptance/features/: todo_list.feature  todolist.feature
tests/acceptance/step_definitions/: test_bdd_todolist.py
tests/unit/: test_todolist.py
